- improve POD
- zap now-irrelevant scripts/dependency.pl

2.52 2020-10-14
- drop test for GraphViz2->dependency method - thanks @neo1ite for report

2.51 2020-10-12
- stop using GraphViz2->dependency when is actually ours

2.50 2020-10-11
- zap pointless logger attribute

2.49 2020-09-27
- split out from GraphViz2 2.48